manpage: mention -h, -v and --version

--- a/llama.1
+++ b/llama.1
@@ -20,7 +20,7 @@
 .Sh SYNOPSIS
 .Nm
 .Bk -words
-.Op Fl -help
+.Op Fl hv
 .Op Ar path
 .Ek
 .Sh DESCRIPTION
@@ -39,8 +39,10 @@ to change the shell' current directory interactively.
 .Pp
 The options are as follows:
 .Bl -tag -width Ds
-.It Fl -help
+.It Fl h , Fl -help
 Show usage and exit.
+.It Fl v , Fl -version
+Show version and exit.
 .El
 .Pp
 The key bindings are:
