manpage: mention Home, End, PageUp and PageDown

--- a/llama.1
+++ b/llama.1
@@ -52,10 +52,14 @@ The key bindings are:
 Move the cursor.
 .It Cm Shift+Arrows
 Move to the last entry in the given direction.
-.It Cm g
+.It Cm g , Cm Home
 Move to the first entry.
-.It Cm G
+.It Cm G , Cm End
 Move to the last entry.
+.It Cm PageUp
+Scroll one page up.
+.It Cm PageDown
+Scroll one page down.
 .It Cm Space
 Toggle file preview.
 .It Cm /
